[package]
name = "candid_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
wasmtime = "12"

[dev-dependencies]
quote = "1"
syn = { version = "2", features = ["parsing", "full", "extra-traits"] }

[[example]]
name = "gen_mock_wat"
path = "util/generate_mock_wat.rs"
